--- a/Jammers/Jammers.csproj
+++ b/Jammers/Jammers.csproj
@@ -13,13 +13,11 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile>
-    </CompilerResponseFile>
+    <CompilerResponseFile></CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows64:19</UnityBuildTarget>
     <UnityVersion>2017.1.1f1</UnityVersion>
-    <RootNamespace>
-    </RootNamespace>
+    <RootNamespace></RootNamespace>
     <LangVersion>4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -98,10 +96,6 @@
     <Compile Include="Assets\Game\Scripts\ItemSystem.cs" />
     <Compile Include="Assets\Game\Scripts\Matthias.cs" />
     <Compile Include="Assets\Game\Scripts\ScoreKeeper.cs" />
-    <Compile Include="Assets\Inheritance\Cat.cs" />
-    <Compile Include="Assets\Inheritance\ControlPanel.cs" />
-    <Compile Include="Assets\Inheritance\Creature.cs" />
-    <Compile Include="Assets\Inheritance\Person.cs" />
     <Compile Include="Assets\NPC Conversations\DialogueControl.cs" />
     <Compile Include="Assets\UI Input\Scripts\ViewModel.cs" />
   </ItemGroup>
